feat: adicionado repository e versão

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "id": "vesper-darkish",
   "publisher": "lucianesantcs",
   "description": "",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.91.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lucianesantcs/vesper-darkish.git"
   },
   "categories": [
     "Themes"
