--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "displayName": "vesper darkish",
   "id": "vesper-darkish",
   "publisher": "lucianesantcs",
-  "description": "",
-  "version": "0.0.3",
+  "description": "Visual Studio Code dark-ish theme based on Vesper Black",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.91.0"
   },
