--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "engines": {
     "vscode": "^1.91.0"
   },
+  "homepage": "https://github.com/lucianesantcs/vesper-darkish#README.md",
   "repository": {
     "type": "git",
     "url": "https://github.com/lucianesantcs/vesper-darkish.git"
